<resources>
    <string name="app_name">FacturaVirtual</string>
    <string name="logotipo">Logotipo</string>
    <string name="logotesaka">LogoTesaka</string>
    <string name="cod_establ">Cod. Establ.</string>
    <string name="ruc">RUC</string>
    <string name="nombre">Nombre</string>
    <string name="obtener">Obtener</string>
    <string name="personalizacion">Personalización</string>
    <string name="subtituloPersonalizacion">Registre los datos del contribuyente que emitirá los comprobantes facturas a través del software.</string>
    <string name="dv">DV</string>
    <string name="aceptar">  Aceptar</string>
    <string name="cancelar">  Cancelar</string>
    <string name="eliminar">  Eliminar</string>
    <string name="borrar">Borrar</string>
    <string name="licencia">Licencia</string>
    <string name="inicio_vigencia">Inicio AAAA-MM-DD</string>
    <string name="p_exped">P. Exped.</string>
    <string name="timbrado">Timbrado</string>
    <string name="factura_virtual">Factura Virtual</string>
    <string name="nombre_fantasia">Nombre Fantasia</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
</resources>
