<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/banner"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_marginTop="22dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_alignParentStart="true"
                    android:src="@drawable/distintivo"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:contentDescription="@string/logotipo" />

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/tesaka_logo"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:contentDescription="@string/logotesaka" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvFacTitulo"
        android:layout_below="@id/banner"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Factura Virtual"/>

    <Switch
        android:id="@+id/swCondicionVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvFacTitulo"
        android:layout_alignBaseline="@id/tvFacTitulo"
        android:buttonTint="@color/customBlue"
        android:text="Contado"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvFacTitulo"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:id="@+id/llInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/border"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/trFacRUC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtSubtitulo"
                    android:weightSum="5">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etFacRUCLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">

                        <EditText
                            android:id="@+id/etFacRUC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ruc"
                            android:inputType="date"
                            android:nextFocusForward="@id/etFacDV" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etFacDVLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/etFacDV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/dv"
                            android:inputType="number"
                            android:maxLength="1"
                            android:nextFocusForward="@id/etFacNombre"/>
                    </android.support.design.widget.TextInputLayout>

                </TableRow>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etFacNombreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <EditText
                        android:id="@+id/etFacNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:inputType="text"
                        android:nextFocusForward="@id/etFacDomicilio" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etFacDomicilioLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <EditText
                        android:id="@+id/etFacDomicilio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Domicilio"
                        android:inputType="text"
                        android:nextFocusForward="@id/etFacCorreo" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etFacCorreoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <EditText
                        android:id="@+id/etFacCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Correo"
                        android:inputType="textEmailAddress"
                        android:nextFocusForward="@id/etFacCantidad" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Transaccion"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="9">
                        <RadioGroup
                            android:id="@+id/rgFacTasa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/rbIVA10"
                            android:orientation="horizontal">


                            <RadioButton
                                android:id="@+id/rbExento"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:buttonTint="@color/customBlue"
                                android:text="Exento"/>

                            <RadioButton
                                android:id="@+id/rbIVA5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layoutDirection="locale"
                                android:layout_weight="3"
                                android:buttonTint="@color/customBlue"
                                android:text="5%"/>

                            <RadioButton
                                android:id="@+id/rbIVA10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layoutDirection="rtl"
                                android:layout_marginRight="0dp"
                                android:layout_weight="3"
                                android:buttonTint="@color/customBlue"
                                android:text="10%" />


                        </RadioGroup>
                </TableRow>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/trFacDetalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="9">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etFacCantidadLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">

                        <EditText
                            android:id="@+id/etFacCantidad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Cantidad"
                            android:text="1"
                            android:inputType="number"
                            android:nextFocusForward="@id/etFacPrecioUnitario" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etFacPrecioUnitarioLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6">

                        <EditText
                            android:id="@+id/etFacPrecioUnitario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Precio Unitario"
                            android:inputType="number"
                            android:nextFocusForward="@id/etFacDescripcion"/>

                    </android.support.design.widget.TextInputLayout>

                </TableRow>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etFacDescripcionLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6">

                    <EditText
                        android:id="@+id/etFacDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="Descripcion"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnFacAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_btn_azul"
                    android:drawableStart="@drawable/ic_paper_plane"
                    android:text=" Guardar y Enviar"
                    android:layout_marginRight="20dp"
                    android:textColor="#ffff" />

                <Button
                    android:id="@+id/btnFacCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/custom_btn_gris"
                    android:drawableStart="@drawable/ic_reply"
                    android:text="@string/cancelar"
                    android:textColor="#000000" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>